--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -53,13 +53,13 @@
         </ul>
 
         <h2>5. Your Choices</h2>
-        <p>You can stop the collection of information by discontinuing the use of the App. If you wish to delete your personal data, contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a>.</p>
+        <p>You can stop the collection of information by discontinuing the use of the App. If you wish to delete your personal data, contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a> or <a href="mailto:diyaphilaminejose@gmail.com">diyaphilaminejose@gmail.com</a>.</p>
 
         <h2>6. Changes to this Privacy Policy</h2>
         <p>We may update this Privacy Policy from time to time. You are encouraged to review this policy periodically for any changes. Continued use of the App after any modifications signifies your acknowledgment and acceptance of the changes.</p>
 
         <h2>7. Contact Us</h2>
-        <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a>.</p>
+        <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a> or <a href="mailto:diyaphilaminejose@gmail.com">diyaphilaminejose@gmail.com</a>.</p>
     </div>
 </body>
 </html>
